fix(SAL-122): archive manifest의 정류장 순서를 결정적으로 만든다